# TeamFlow

./: .gitignore  .replit  app.py  auth.py  main.py  models.py  pyproject.toml  requirements.txt  socket_events.py
attached_assets/: Pasted-IntegrityError-sqlalchemy-exc-IntegrityError-sqlite3-IntegrityError-UNIQUE-constraint-failed-us-1736292830514.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-user-i-1736285331065.txt
controllers/: message_controller.py
instance/: teamflow.db
models/: message.py
services/: message_service.py
src/: __init__.py  app.py  auth.py  models.py  rag_utils.py  socket_events.py
src/static/js/: chat.js
src/templates/: base.html  chat.html  files.html  rag_query.html
src/uploads/: hockey-reference-data.md  rag-test-data.md
static/css/: style.css
static/js/: main.js  websocket.js
templates/: base.html  chat.html  login.html  message_detail.html
